# smart_locator

./: .coverage  README.md  pyproject.toml  t.py
demotest/: playwright.config.py  requirements.txt  smartlocator.config.json
demotest/.backup/: 20260329170202__pages__login_page.py  20260329170926__pages__login_page.py  20260329170926__tests__test_as_a_user_i_want_to_log_in_successfully_using_valid_credentials.py  20260329173131__pages__login_page.py  20260329173131__tests__test_as_a_user_i_want_to_log_in_successfully_using_valid_credentials.py
demotest/tests/: test_as_a_user_i_want_to_log_in_successfully_using_valid_credentials.py  test_login.py
smart_locator/: __init__.py  assistant.py  cache.py  cli.py  config.py  core.py  errors.py  file_manager.py  frameworks.py  models.py  openai_client.py  parser.py  project_generator.py  render.py  scorer.py  story_parser.py  test_runner.py
smart_locator/templates/playwright/: page.py.j2  playwright.config.py.j2  (+2 more)
testdemo/: requirements.txt  smartlocator.config.json
testdemo/.backup/: 20260329162009__pages__login_page.py  20260329162028__tests__test_login.py  20260329164154__tests__test_login.py
testdemo/pages/: base_page.py  login_page.py
testdemo/tests/: conftest.py  test_as_a_user_i_want_to_log_in_successfully_using_valid_credentials.py  test_login.py
testdemo/utils/: driver_factory.py
tests/: test_assistant.py  test_cache.py  test_cli.py  test_core.py  test_file_manager.py  test_openai_client.py  test_parser_render.py  test_project_generator.py  test_scorer.py  test_story_parser.py  test_test_runner.py
(+11 files in other folders)
