[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smart-locator"
version = "0.1.0"
description = "AI-assisted Selenium locator discovery, scoring, and code generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["selenium", "testing", "locators", "openai", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "openai>=1.0.0",
  "selenium>=4.14",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "pytest>=8.3",
]

[project.scripts]
smart-locator = "smart_locator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["smart_locator"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["smart_locator"]

[tool.coverage.report]
fail_under = 80
show_missing = true
